# pypendentdrop

./: .gitignore  .readthedocs.yaml  README.md  examplescript.py  launchgui.py  ppd_commandline.py  ppd_gui  pyproject.toml  requirements.txt  todo.md  todo.txt
docs/source/: API.rst  howtouse.rst  index.rst  installation.rst  quickstart.rst
ppd/: __init__.py  anal.py  analyze.py  gui.py  plotresults.py  ppd_mainwindow.py  ppd_plotwidget.py
src/pypendentdrop/: __init__.py  __main__.py  analyze.py  cli.py  plot.py  ppd_parse.py  ppdplot.py
src/pypendentdrop/analysis/: fetchimage.py  findparameters.py  getcontour.py
src/pypendentdrop/gui/: __main__.py  gui.py  mainwindow.py  plotwidget.py
src/pypendentdrop/tests/: bond_estimation.py  findsymmetryangle.py  water1.py  water2.py  water2_rotated.py
src/pypendentdrop/tests/testdata/: water_2_rotated.tif
